# sp1-keccak-preimage

./: README.md
program/: Cargo.toml
program/elf/: riscv32im-succinct-zkvm-elf
program/src/: main.rs
script/: Cargo.toml
script/src/: main.rs
