[package]
name = "keccak-program"
edition = "2021"
version = "0.1.0"

[dependencies]
sp1-zkvm = { git = "https://github.com/succinctlabs/sp1.git", branch = "main" }
sha3 = { git = "https://github.com/RustCrypto/hashes", package = "sha3", tag = "sha3/v0.10.8" }

[patch."https://github.com/RustCrypto/hashes"]
sha3 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha3", branch = "patch-sha3-v0.10.8" }
